    correct namenode (Wei-Chiu Chuang via vinayakumarb)

    HDFS-9493. Test o.a.h.hdfs.server.namenode.TestMetaSave fails in trunk.
    (Tony Wu via lei)

    HDFS-9639. Inconsistent Logging in BootstrapStandby. (Xiaobing Zhou via
    Arpit Agarwal)

    HDFS-9584. NPE in distcp when ssl configuration file does not exist in
    class path. (Surendra Singh Lilhore via Xiaoyu Yao)

Release 2.7.3 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-7163. WebHdfsFileSystem should retry reads according to the configured
    retry policy. (Eric Payne via kihwal)

    HDFS-9574. Reduce client failures during datanode restart (kihwal)

    HDFS-9569. Log the name of the fsimage being loaded for better
    supportability. (Yongjun Zhang)

  OPTIMIZATIONS

  BUG FIXES

    HDFS-9289. Make DataStreamer#block thread safe and verify genStamp in
    commitBlock. (Chang Li via zhz)

    HDFS-4937. ReplicationMonitor can infinite-loop in 
    BlockPlacementPolicyDefault#chooseRandom(). (kihwal)

    HDFS-9383. TestByteArrayManager#testByteArrayManager fails.
    (szetszwo via kihwal)

    HDFS-9516. Truncate file fails with data dirs on multiple disks.
    (Plamen Jeliazkov via shv)

    HDFS-9533. seen_txid in the shared edits directory is modified during
    bootstrapping (kihwal)

    HDFS-9505. HDFS Architecture documentation needs to be refreshed.
    (Masatake Iwasaki via aajisaka)

    HDFS-8914. Document HA support in the HDFS HdfsDesign.md.
    (Lars Francke via wheat9)

    HDFS-9648. TestStartup.testImageChecksum is broken by HDFS-9569's message
    change. (Wei-Chiu Chuang via Yongjun Zhang)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-8659. Block scanner INFO message is spamming logs. (Yongjun Zhang)

    HDFS-8099. Change "DFSInputStream has been closed already" message to
    debug log level (Charles Lamb via Colin P. McCabe)
