@@ -26,6 +26,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|test
+operator|.
+name|GenericTestUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|tools
 operator|.
 name|util
@@ -119,6 +133,18 @@ operator|.
 name|lang
 operator|.
 name|Integer
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|TimeoutException
 import|;
 end_import
 
@@ -374,6 +400,11 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+name|worker
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -533,6 +564,11 @@ argument_list|,
 name|numReports
 argument_list|)
 expr_stmt|;
+name|workers
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
 block|}
 annotation|@
 name|Test
@@ -647,6 +683,343 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+name|worker
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testSimpleProducerConsumerShutdown ()
+specifier|public
+name|void
+name|testSimpleProducerConsumerShutdown
+parameter_list|()
+throws|throws
+name|InterruptedException
+throws|,
+name|TimeoutException
+block|{
+comment|// create a producer-consumer thread pool with one thread.
+name|ProducerConsumer
+argument_list|<
+name|Integer
+argument_list|,
+name|Integer
+argument_list|>
+name|worker
+init|=
+operator|new
+name|ProducerConsumer
+argument_list|<
+name|Integer
+argument_list|,
+name|Integer
+argument_list|>
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|worker
+operator|.
+name|addWorker
+argument_list|(
+operator|new
+name|CopyProcessor
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// interrupt worker threads
+name|worker
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+comment|// Regression test for HDFS-9612
+comment|// Periodically check, and make sure that worker threads are ultimately
+comment|// terminated after interrupts
+name|GenericTestUtils
+operator|.
+name|waitForThreadTermination
+argument_list|(
+literal|"pool-.*-thread.*"
+argument_list|,
+literal|100
+argument_list|,
+literal|10000
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|10000
+argument_list|)
+DECL|method|testMultipleProducerConsumerShutdown ()
+specifier|public
+name|void
+name|testMultipleProducerConsumerShutdown
+parameter_list|()
+throws|throws
+name|InterruptedException
+throws|,
+name|TimeoutException
+block|{
+name|int
+name|numWorkers
+init|=
+literal|10
+decl_stmt|;
+comment|// create a producer consumer thread pool with 10 threads.
+specifier|final
+name|ProducerConsumer
+argument_list|<
+name|Integer
+argument_list|,
+name|Integer
+argument_list|>
+name|worker
+init|=
+operator|new
+name|ProducerConsumer
+argument_list|<
+name|Integer
+argument_list|,
+name|Integer
+argument_list|>
+argument_list|(
+name|numWorkers
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|numWorkers
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|worker
+operator|.
+name|addWorker
+argument_list|(
+operator|new
+name|CopyProcessor
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// starts two thread: a source thread which put in work, and a sink thread
+comment|// which takes a piece of work from ProducerConsumer
+class|class
+name|SourceThread
+extends|extends
+name|Thread
+block|{
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+try|try
+block|{
+name|worker
+operator|.
+name|put
+argument_list|(
+operator|new
+name|WorkRequest
+argument_list|<
+name|Integer
+argument_list|>
+argument_list|(
+literal|42
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+return|return;
+block|}
+block|}
+block|}
+block|}
+empty_stmt|;
+comment|// The source thread put requests into producer-consumer.
+name|SourceThread
+name|source
+init|=
+operator|new
+name|SourceThread
+argument_list|()
+decl_stmt|;
+name|source
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+class|class
+name|SinkThread
+extends|extends
+name|Thread
+block|{
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|WorkReport
+argument_list|<
+name|Integer
+argument_list|>
+name|report
+init|=
+name|worker
+operator|.
+name|take
+argument_list|()
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|42
+argument_list|,
+name|report
+operator|.
+name|getItem
+argument_list|()
+operator|.
+name|intValue
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+return|return;
+block|}
+block|}
+block|}
+empty_stmt|;
+comment|// The sink thread gets proceessed items from producer-consumer
+name|SinkThread
+name|sink
+init|=
+operator|new
+name|SinkThread
+argument_list|()
+decl_stmt|;
+name|sink
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+comment|// sleep 1 second and then shut down source.
+comment|// This makes sure producer consumer gets some work to do
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+comment|// after 1 second, stop source thread to stop pushing items.
+name|source
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+comment|// wait until all work is consumed by sink
+while|while
+condition|(
+name|worker
+operator|.
+name|hasWork
+argument_list|()
+condition|)
+block|{
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+name|worker
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+comment|// Regression test for HDFS-9612
+comment|// make sure worker threads are terminated after workers are asked to
+comment|// shutdown.
+name|GenericTestUtils
+operator|.
+name|waitForThreadTermination
+argument_list|(
+literal|"pool-.*-thread.*"
+argument_list|,
+literal|100
+argument_list|,
+literal|10000
+argument_list|)
+expr_stmt|;
+name|sink
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+name|source
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
+name|sink
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
